--- a/src/styles/nomatch.css
+++ b/src/styles/nomatch.css
@@ -1,3 +1,4 @@
+/* responsif saat width normal 1366 */
 * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -85,7 +86,7 @@
             box-shadow: 0px 4px 15px -5px #0046d5;
   }
   
-  
+  /* responsif saat width di bawah 767  */
   @media only screen and (max-width: 767px) {
       .notfound .notfound-404 {
         height: 142px;
